# advent-of-code

./: .gitignore  creator.sh
2018/: package-lock.json  package.json  tsconfig.json
2023/day1/: part1.rb  part2.rb
2023/day10/: part2.rb
2023/day11/: part1.rb  part2.rb
2023/day12/: part1.rb  part2.rb
2023/day13/: part1.rb
2023/day14/: part1.rb  part2.rb
2023/day15/: part1.rb  part2.rb
2023/day16/: part1.rb  part2.rb
2023/day17/: part1.rb
2023/day18/: part1.rb  part2.rb
2023/day19/: part1.rb  part2.rb
2023/day2/: day2.rb  part2.rb
2023/day20/: part1.rb  part2.rb
2023/day21/: part1.rb  part2.rb
2023/day22/: part1.rb  part2.rb
2023/day23/: part1.rb  part2.rb
2023/day24/: part1.rb
2023/day25/: part1.rb
2023/day3/: part1.rb  part2.rb
2023/day4/: part1.rb  part2.rb
2023/day5/: part1.rb  part2.rb
2023/day6/: part1.rb  part2.rb
2023/day7/: part1.rb  part2.rb
2023/day8/: part1.rb  part2.rb
2023/day9/: part1.rb  part2.rb
AoC_2024/: AoC_2024.opam  README.md  dune-project
AoC_2024/lib/: day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  day_09.ml  day_11.ml  dune  solver.ml
AoC_2024/test/: dune
AoC_2024/test/test_input/: day09_test
aoc2017-ts/: package-lock.json  package.json  tsconfig.json
aoc2017-ts/inputs/: day06.txt  day06_test.txt  day07_test.txt  day08_test.txt  day10.txt  day10_test.txt  day11.txt  day12.txt  day12_test.txt  day16.txt  day17_test.txt  day18.txt  day19_test.txt  day21.txt  day22.txt  day23.txt  day24_test.txt
aoc2025-ts/: README.md  package-lock.json  package.json
(+74 files in other folders)
